# async-event-processor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  worker.py
app/api/endpoints/: messages.py
app/core/: config.py  storage.py
app/schemas/: message.py
app/services/: rabbitmq.py
app/tasks/: celery.py  message_tasks.py
tests/: test_api.py  test_worker.py
